--- a/global.css
+++ b/global.css
@@ -1,10 +1,12 @@
 * {
+    color-scheme: light dark;
     background-color: light-dark(beige, black);
     color: light-dark(black, beige);
 }
 
 body {
     display: flex;
+    flex-direction: column;
 
     height: 100%;
     width: auto;
@@ -30,6 +32,21 @@ main {
 
 h1 {
     grid-area: Title;
+}
+
+footer {
+    display: block;
+    align-items: center;
+    justify-items: center;
+}
+
+.versionsList {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+
+    justify-content: space-around;
+
 }
 
 #resume {
