--- a/global.css
+++ b/global.css
@@ -10,6 +10,23 @@
     color: light-dark(black, beige); */
 }
 
+a {
+    color: currentColor;
+    text-decoration: none;
+
+    transition-duration: 300ms;
+}
+
+a:hover {
+    color: var(--Secundary-color);
+    transform: scale(1.1);
+}
+
+a:active {
+    color: var(--Secundary-color);
+    transform: scale(1.1);
+}
+
 @media (prefers-color-scheme: dark) {
   body { background: #333; color: #f5f5dc; }
 }
@@ -24,12 +41,33 @@
 
 header {
     display: flex;
-    flex-direction: column;
-    align-items: end;
-    justify-content: center;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
 
     padding: 0.5rem;
     width: -webkit-fill-available;
+}
+
+header ul {
+    display: flex;
+    flex-direction: row;
+
+    gap: 1rem;
+}
+
+header ul li {
+    list-style-type: none;
+
+
+    border-bottom: solid 1px var(--Secundary-color);
+    border-radius: 2px;
+
+    transition-duration: 300ms;
+}
+
+header ul li:hover {
+    transform: scale(1.1);
 }
 
 body {
@@ -66,6 +104,8 @@ footer {
     display: block;
     align-items: center;
     justify-items: center;
+
+    width: 100%;
 }
 
 .versionsList {
@@ -88,6 +128,103 @@ footer {
 
     gap: 1rem;
 }
+
+/* Estilos de el Modal */
+
+/* Estilo de el fondo de el Modal */
+.modal {
+    position: fixed;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    backdrop-filter: blur(8px) brightness(0.8);
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Estilo de el Formulario de el Modal */
+.modal form {
+    background-color: var(--Secundary-bg);
+    backdrop-filter: brightness(1.1);
+    padding: 1rem;
+    border-radius: 0.5rem;
+
+    display: flex;
+    flex-direction: column;
+
+
+}
+
+.modal form label {
+    display: flex;
+    flex-direction: column;
+
+    gap: 0.5rem;
+
+    input, select {
+        margin-left: 1rem;
+        padding: 0.25rem;
+
+        border-radius: 12px;
+    }
+}
+
+.modal header {
+    position: fixed;
+    right: 5%;
+
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    justify-content: center;
+
+    padding: 0rem;
+}
+
+.modal footer {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+    margin-top: 1.5rem;
+
+}
+
+.cerrar {
+    position: relative;
+    width: 20px;
+    height: 20px;
+}
+
+.cerrar > div {
+    position: absolute;
+    top: 45%; left: 0%;
+    width: 100%;
+    height: 10%;
+
+}
+
+.line1 {
+    transform: rotate(45deg);
+    background-color: red;
+    content: " ";
+}
+
+.line2 {
+    transform: rotate(315deg);
+    background-color: red;
+    content: " ";
+}
+
+/* Estilo que esconde el Modal */
+
+.hidden {
+    display: none;
+}
+
+
+/* Estilos de la Tabla */
 
 #tabla {
     display: block;
