--- a/global.css
+++ b/global.css
@@ -11,6 +11,8 @@
 
     height: 100%;
     width: 100%;
+    /* asegurando que compute el espacio de el Scrollbar */
+    scrollbar-gutter: stable;
 }
 
 * {
@@ -56,6 +58,8 @@ body {
     align-items: center;
 
     position: relative;
+
+    overflow-x: hidden;
 }
 
 /* Configuracion de Espacio para el Header
@@ -84,6 +88,8 @@ header {
 
     backdrop-filter: blur(26px) brightness(0.9);
     border-radius: 0 0 16px 16px;
+
+    margin-left: 15px;
 }
 
 header ul {
@@ -111,6 +117,8 @@ header ul li:hover {
 h1 {
     grid-area: Title;
     text-align: center;
+
+    padding-block: 0.25rem;
 }
 
 footer {
